# eodag-labextension

./: .copier-answers.yml  .eslintignore  .eslintrc.js  .gitignore  .markdownlint.yaml  .npmrc  .pre-commit-config.yaml  .prettierignore  .prettierrc  .yarnrc.yml  CHANGES.md  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  RELEASE.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  docker-compose.yml  eodag-config  get_pypi_latest_version.sh  install.json  jupyterhub_config.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tsconfig.json
doc/: user_manual.md
eodag-labextension/: __init__.py  handlers.py
eodag_labextension/: Untitled.ipynb  __init__.py  __meta__.py  _version.py  config.py  handlers.py
eodag_nbextension/: __init__.py
jupyter-config/: eodag-labextension.json  eodag_labextension.json
notebooks/: basic_usage.ipynb  user_manual.ipynb
schema/: plugin.json
src/: Autocomplete.tsx  BrowseComponent.tsx  CodeGenerator.ts  DescriptionProductComponent.tsx  FormComponent.tsx  MapExtentComponent.tsx  MapFeatureComponent.tsx  ModalComponent.tsx  SearchService.ts  StorageService.ts  browser.tsx  config.ts  handler.ts  icones.tsx  index.ts  leaflet-draw.d.ts  materialui.lab.d.ts  optionsDropdown.tsx  react-select.d.ts  svg.d.ts  terraformer-wkt.d.ts  types.ts  utils.ts  widget.tsx
style/: alert.css  base.css  button.css  customErrorDialog.css  form_field.css  index.css  index.js  leaflet.css  loader.css  menu_dropdown.css  modal.css  result.css  result_list.css
temp/: AGGREGATE.json  (+3 more)
(+77 files in other folders)
