[build-system]
requires = ["jupyter_packaging~=0.7.9", "jupyterlab~=4.0", "setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
known_third_party = ["eodag", "jupyter_packaging", "jupyter_server", "notebook", "setuptools", "tornado"]

[tool.semantic_release.branches.main]
match = "(master|develop)"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '''build: bump version.+''',
]
mode = "update"
insertion_flag = "# Release history"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGES.md"
output_format = "md"
